Nonsense behaviour in node editor #36739

Closed
opened 2013-09-16 15:21:09 +02:00 by Cenek Strichel · 6 comments

%%%--- Operating System, Graphics card ---
W7 64b, Quadro 4000

- Blender version with error, and version that worked ---

r60154

- Short description of error ---

When you want add some node to node editor, you click on name and move mouse. But when you want cancel operation, you can press right mouse button or ESC. But node is still there. Normal behaviour is that when I press ESC my operation must be canceled and node deleted, but it still remain there. Another very tedious thing is, that my new canceled node is created on left side covered by panel. I know that it is not bug, but very strange behaviour without sense.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- W7 64b, Quadro 4000 - Blender version with error, and version that worked --- r60154 - Short description of error --- When you want add some node to node editor, you click on name and move mouse. But when you want cancel operation, you can press right mouse button or ESC. But node is still there. Normal behaviour is that when I press ESC my operation must be canceled and node deleted, but it still remain there. Another very tedious thing is, that my new canceled node is created on left side covered by panel. I know that it is not bug, but very strange behaviour without sense. - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%The operator you are cancelling when ESC/RMB is the node move (node.select actually).
This is no different than press E to extrude a face and cancel to decide later on where to move the new face to.

Ctrl+Z removes the recently added node.

@Lukas-132 any thoughts? I can look at implementing the suggested behaviour, but want to make sure it fits with your design first.%%%

%%%The operator you are cancelling when ESC/RMB is the node move (node.select actually). This is no different than press E to extrude a face and cancel to decide later on where to move the new face to. Ctrl+Z removes the recently added node. @Lukas-132 any thoughts? I can look at implementing the suggested behaviour, but want to make sure it fits with your design first.%%%
Member

%%%Yes, this would probably be a good change. Not sure how it could work in detail, the transform op is called by the add_node operator after main execute. The transform operators are the most generic (and hugely complex) operators in blender, it's probably not a good idea to shoehorn a "delete node on cancel" option into them. I'll have to check if we can get the actual return from the modal transform operator, such that if transform gets cancelled, the actual add_node operator deletes the node again.%%%

%%%Yes, this would probably be a good change. Not sure how it could work in detail, the transform op is called by the add_node operator after main execute. The transform operators are the most generic (and hugely complex) operators in blender, it's probably not a good idea to shoehorn a "delete node on cancel" option into them. I'll have to check if we can get the actual return from the modal transform operator, such that if transform gets cancelled, the actual add_node operator deletes the node again.%%%
Member

%%%Fixed in r60197. Thanks for the suggestion!%%%

%%%Fixed in r60197. Thanks for the suggestion!%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thank you! :) Fantastic support from you. As ex-softimage user I am still surprised as great support has Blender.%%%

%%%Thank you! :) Fantastic support from you. As ex-softimage user I am still surprised as great support has Blender.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36739
No description provided.