source/blender/editors/transform/transform.h
@@ -341,7 +341,9 @@ typedef struct TransInfo {
 	float		auto_values[4];
 	float		axis[3];
 	float		axis_orig[3];	/* TransCon can change 'axis', store the original value here */
-	
+
+	short		remove_on_cancel; /* remove elements if operator is cancelled */
+
 	void		*view;
 	struct bContext *context; /* Only valid (non null) during an operator called function. */
 	struct ScrArea	*sa;
