source/blender/editors/transform/transform_ops.c
@@ -537,6 +537,7 @@ void Transform_Properties(struct wmOperatorType *ot, int flags)
 
 	if (flags & P_OPTIONS) {
 		RNA_def_boolean(ot->srna, "texture_space", 0, "Edit Texture Space", "Edit Object data texture space");
+		RNA_def_boolean(ot->srna, "remove_on_cancel", 0, "Remove on Cancel", "Remove elements on cancel");
 	}
 
 	if (flags & P_CORRECT_UV) {
